running auto cron job from server

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             font-family: 'MyriadPro-It';
             src: url('MyriadPro-It.otf');
         }
+        h2, .bull, i, i a {
+            color: #00afa7 !important;
+        }
+        i {
+            font-family: 'MyriadPro-It';
+            font-weight: normal;
+        }
         a {
             color: black;
             text-decoration: none;
@@ -31,8 +38,7 @@
         h2 {
             font-family: 'MyriadPro-Regular';
             font-weight: normal;
-            font-size: 16.5px;
-            color: #00afa7;
+            font-size: 16px;
         }
         .title {
             margin-bottom: 10px;
@@ -41,7 +47,7 @@
         .title h2 {
         }
         .title h1 {
-            margin-bottom: -7px;
+            margin-bottom: -5px;
         }
 
         .subtitle {
@@ -100,7 +106,6 @@
             line-height: 18px;
         }
         .bull {
-            color: #00afa7;
             font-size: 15px;
             clear: both;
             margin-left: 72.4px;
@@ -138,8 +143,8 @@
     </head>
     <body>
     <div class="title">
-        <h1>Steven Stevenson</h1>
-        <h2>Web Designer</h2>
+        <h1>Luca Matteis</h1>
+        <h2>Web Developer</h2>
     </div>
 
     <div class="section">
@@ -147,7 +152,7 @@
             mobile
         </div>
         <div class="right">
-            +44 772 555 321
+            +39 339 75 65 532
         </div>
     </div>
     <div class="section">
@@ -155,7 +160,7 @@
             email
         </div>
         <div class="right">
-            steven@misterstevenson.com
+            lmatteis@gmail.com
         </div>
     </div>
     <div class="section">
@@ -163,7 +168,7 @@
             web
         </div>
         <div class="right">
-            misterstevenson.com
+            <a href="http://pseudocodice.com">pseudocodice.com</a>
         </div>
     </div>
 
@@ -171,16 +176,19 @@
     <div class="bull">&bull;</div>
 
     <div class="subtitle">
-        <h1>friendlyleopard.com</h1>
-        <h2>Senior Webdesigner</h2>
+        <h1>Bioversity International</h1>
+        <h2>Web Developer</h2>
     </div>
     <div class="section">
         <div class="left">
-        June 2007 &minus; present
+            2010 &minus; present
         </div>
         <div class="right">
-            Responsible for the visual design and HTML/CSS templating for a social media site where people discuss their unusual pets.<br>
-            Mentoring and guiding interns and junior team members. Overseeing and coordinating design of marketing materials.
+            Responsible for the development and design of the <i><a href="http://www.cropontology.org">Crop Ontology</a></i> site where people can learn and discuss about crop varieties and traits.
+            <br>
+            Working closely with the users to understand their needs for the application.
+            <br>
+            Developing and maintaining other smaller websites in use by the scientific community.
         </div>
     </div>
 
