overall finished. need to check for typos

--- a/index.html
+++ b/index.html
@@ -187,27 +187,52 @@
             Responsible for the development and design of the <i><a href="http://www.cropontology.org">Crop Ontology</a></i> site where people can learn and discuss about crop varieties and traits.
             <br>
             Working closely with the users to understand their needs for the application.
-            <br>
             Developing and maintaining other smaller websites in use by the scientific community.
         </div>
     </div>
 
     <div class="subtitle">
-        <h1>misterstevenson.com</h1>
-        <h2>Freelance Designer</h2>
+        <h1>Pseudo Codice</h1>
+        <h2>Software Engineer</h2>
     </div>
     <div class="section">
         <div class="left">
-        2005 &minus; present
+        2009 &minus; 2010
         </div>
         <div class="right">
-            Worked on a multitude of web and corporate identity projects for a wide variety of clients.<br>
-            Providing identity and stationary design, webdesign, HTML/CSS development and WordPress integration (content management system).
-            <div class="subsection">
-                <div class="italic">Web projects include</div>
-                <a href="#">blueduckrecruit.com</a> &minus; <span class="italic">Recruitment Agency</span>
-                <a href="#">evildog.com</a> &minus; <span class="italic">Recruitment Agency</span>
-            </div>
+            Worked on a multitude of desktop and web applications for a wide variety of clients.
+            <br>
+            Responsible for creating secure and tested software using <i>agile development</i> methodologies.
+        </div>
+    </div>
+
+    <div class="subtitle">
+        <h1>OnlyWire</h1>
+        <h2>Web Developer</h2>
+    </div>
+    <div class="section">
+        <div class="left">
+        2008 &minus; 2009
+        </div>
+        <div class="right">
+            Developed the entire HTML, CSS and JavaScript user experience for their website. Engineered the backend using the <i>Play!</i> Java framework.
+            <br>
+            Worked closely with the web development team to ensure technical feasabilty and correct design implementation.
+        </div>
+    </div>
+
+    <div class="subtitle">
+        <h1>CherryOne</h1>
+        <h2>Web Developer</h2>
+    </div>
+    <div class="section">
+        <div class="left">
+        2007 &minus; 2008
+        </div>
+        <div class="right">
+            Developed and maintaned sites using a LAMP stack (Linux, Apache, MySQL and PHP).
+            <br>
+            Worked with many different PHP frameworks with extensive use of the popular MVC design pattern.
         </div>
     </div>
 
@@ -215,32 +240,43 @@
 
     <div class="section" style="margin-top: 15px;">
         <div class="left">
-        2004 &minus; 2004
+        2009 &minus; present
         </div>
         <div class="right">
-            <h1>London College of Communication</h1>
-            <h2>First Class BA (Hons) Graphic Design</h2>
+            <h1>Computer Science Degree</h1>
+            <h2>Tor Vergata, Rome, Italy</h2>
         </div>
     </div>
 
 
     <!-- SIDEBAR -->
     <div class="sidebar">
-        <h1>Computer Skills</h1>
-
-        <div class="right">Adobe Creative Suite</div>
+        <h1>Programming Languages</h1>
+        <div class="right">JavaScript, Java, PHP, C</div>
         <div class="left multiline">Expert level</div>
 
-        <div class="right">Flash</div>
-        <div class="left multiline">Expert level in design and animation, basic knowledge of ActionScript 3</div>
+        <div class="right">Python, Ruby, C++, C#</div>
+        <div class="left multiline">Good working knowledge</div>
+
+        <div class="bull">&bull;</div>
+
+        <h1>Software and Libraries</h1>
+
+        <div class="left multiline">MySQL, CouchDB, Google App Engine, Node.js,  jQuery, Lucene</div>
 
         <div class="bull">&bull;</div>
 
         <h1>Interests</h1>
         <div class="left multiline">Running</div>
         <div class="left multiline">Snowboarding</div>
-        <div class="left multiline">Sci-fi</div>
+        <div class="left multiline">Science Fiction</div>
         <div class="left multiline">Astronomy</div>
+
+        <div class="bull">&bull;</div>
+
+        <h1>Online Presence</h1>
+        <div class="left multiline"><i><a href="https://github.com/lmatteis">github.com/lmatteis</a></i></div>
+        <div class="left multiline"><i><a href="http://stackoverflow.com/users/50394/luca-matteis">stackoverflow.com/users/50394/luca-matteis</a></i></div>
     </div>
 
     </body>
