fixed some typos

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="right">
             Developed the entire HTML, CSS and JavaScript user experience for their website. Engineered the backend using the <i>Play!</i> Java framework.
             <br>
-            Worked closely with the web development team to ensure technical feasabilty and correct design implementation.
+            Worked closely with the web development team to ensure technical feasibility and correct design implementation.
         </div>
     </div>
 
@@ -230,7 +230,7 @@
         2007 &minus; 2008
         </div>
         <div class="right">
-            Developed and maintaned sites using a LAMP stack (Linux, Apache, MySQL and PHP).
+            Developed and maintained sites using a LAMP stack (Linux, Apache, MySQL and PHP).
             <br>
             Worked with many different PHP frameworks with extensive use of the popular MVC design pattern.
         </div>
