--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 
         <h1>Interests</h1>
         <div class="left multiline">Running</div>
+        <div class="left multiline">Guitar</div>
         <div class="left multiline">Snowboarding</div>
         <div class="left multiline">Science Fiction</div>
         <div class="left multiline">Astronomy</div>
