added countries near to each experience to show where i lived

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         h2, .bull, i, i a {
             color: #00afa7 !important;
         }
+        small {
+            font-family: 'MyriadPro-It';
+            font-weight: normal;
+
+        }
         i {
             font-family: 'MyriadPro-It';
             font-weight: normal;
@@ -176,7 +181,7 @@
     <div class="bull">&bull;</div>
 
     <div class="subtitle">
-        <h1>Bioversity International</h1>
+        <h1>Bioversity International <small>Rome, Italy</small></h1>
         <h2>Web Developer</h2>
     </div>
     <div class="section">
@@ -192,7 +197,7 @@
     </div>
 
     <div class="subtitle">
-        <h1>Pseudo Codice</h1>
+        <h1>Pseudo Codice <small>Chicago, IL, USA</small></h1>
         <h2>Software Engineer</h2>
     </div>
     <div class="section">
@@ -207,7 +212,7 @@
     </div>
 
     <div class="subtitle">
-        <h1>OnlyWire</h1>
+        <h1>OnlyWire <small>Sacramento, CA, USA</small></h1>
         <h2>Web Developer</h2>
     </div>
     <div class="section">
@@ -222,7 +227,7 @@
     </div>
 
     <div class="subtitle">
-        <h1>CherryOne</h1>
+        <h1>CherryOne <small>Chicago, IL, USA</small></h1>
         <h2>Web Developer</h2>
     </div>
     <div class="section">
@@ -268,9 +273,9 @@
 
         <h1>Interests</h1>
         <div class="left multiline">Running</div>
-        <div class="left multiline">Guitar</div>
+        <div class="left multiline">Playing guitar</div>
         <div class="left multiline">Snowboarding</div>
-        <div class="left multiline">Science Fiction</div>
+        <div class="left multiline">Reading science fiction</div>
         <div class="left multiline">Astronomy</div>
 
         <div class="bull">&bull;</div>
