--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <div class="section" style="margin-top: 15px;">
         <div class="left">
-        2009 &minus; present
+        2007 &minus; 2010
         </div>
         <div class="right">
             <h1>Computer Science Degree</h1>
