added some better dates

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
             padding:0;
             margin-bottom: 15px;
         }
+        .months {
+            font-size: 10px;
+        }
         </style>
     </head>
     <body>
@@ -168,14 +171,6 @@
             lmatteis@gmail.com
         </div>
     </div>
-    <div class="section">
-        <div class="left">
-            web
-        </div>
-        <div class="right">
-            <a href="http://pseudocodice.com">pseudocodice.com</a>
-        </div>
-    </div>
 
 
     <div class="bull">&bull;</div>
@@ -186,7 +181,7 @@
     </div>
     <div class="section">
         <div class="left">
-            2010 &minus; present
+            May 2010 &minus; present
         </div>
         <div class="right">
             Responsible for the development and design of the <i><a href="http://www.cropontology.org">Crop Ontology</a></i> site where people can learn and discuss about crop varieties and traits.
@@ -202,7 +197,8 @@
     </div>
     <div class="section">
         <div class="left">
-        2009 &minus; 2010
+        Nov 2009 &minus; May 2010
+        <br> <span class="months">(7 months)</span>
         </div>
         <div class="right">
             Worked on a multitude of desktop and web applications for a wide variety of clients.
@@ -217,7 +213,8 @@
     </div>
     <div class="section">
         <div class="left">
-        2008 &minus; 2009
+        Mar 2008 &minus; Nov 2009
+        <br> <span class="months">(20 months)</span>
         </div>
         <div class="right">
             Developed the entire HTML, CSS and JavaScript user experience for their website. Engineered the backend using the <i>Play!</i> Java framework.
@@ -232,7 +229,7 @@
     </div>
     <div class="section">
         <div class="left">
-        2007 &minus; 2008
+        Jan 2007 &minus; Mar 2008 <br> <span class="months">(14 months)</span>
         </div>
         <div class="right">
             Developed and maintained sites using a LAMP stack (Linux, Apache, MySQL and PHP).
@@ -245,7 +242,7 @@
 
     <div class="section" style="margin-top: 15px;">
         <div class="left">
-        2007 &minus; 2010
+        2009 &minus; 2011<br> <span class="months">not yet completed</span>
         </div>
         <div class="right">
             <h1>Computer Science Degree</h1>
