moved education to the sidebar

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             padding:0;
             margin-bottom: 15px;
         }
-        .months {
+        .small {
             font-size: 10px;
         }
         </style>
@@ -198,7 +198,7 @@
     <div class="section">
         <div class="left">
         Nov 2009 &minus; May 2010
-        <br> <span class="months">(7 months)</span>
+        <br> <span class="small">(7 months)</span>
         </div>
         <div class="right">
             Worked on a multitude of desktop and web applications for a wide variety of clients.
@@ -209,12 +209,12 @@
 
     <div class="subtitle">
         <h1>OnlyWire <small>Sacramento, CA, USA</small></h1>
-        <h2>Web Developer</h2>
+        <h2>Java Developer</h2>
     </div>
     <div class="section">
         <div class="left">
         Mar 2008 &minus; Nov 2009
-        <br> <span class="months">(20 months)</span>
+        <br> <span class="small">(20 months)</span>
         </div>
         <div class="right">
             Developed the entire HTML, CSS and JavaScript user experience for their website. Engineered the backend using the <i>Play!</i> Java framework.
@@ -229,7 +229,7 @@
     </div>
     <div class="section">
         <div class="left">
-        Jan 2007 &minus; Mar 2008 <br> <span class="months">(14 months)</span>
+        Jan 2007 &minus; Mar 2008 <br> <span class="small">(14 months)</span>
         </div>
         <div class="right">
             Developed and maintained sites using a LAMP stack (Linux, Apache, MySQL and PHP).
@@ -238,15 +238,18 @@
         </div>
     </div>
 
-    <div class="bull">&bull;</div>
 
-    <div class="section" style="margin-top: 15px;">
+    <div class="subtitle">
+        <h1>Bioversity International <small>Rome, Italy</small></h1>
+        <h2>Database Intern</h2>
+    </div>
+    <div class="section">
         <div class="left">
-        2009 &minus; 2011<br> <span class="months">not yet completed</span>
+        July 2005 &minus; Dec 2006 <br> <span class="small">(18 months)</span>
         </div>
         <div class="right">
-            <h1>Computer Science Degree</h1>
-            <h2>Tor Vergata, Rome, Italy</h2>
+            Automated the migration of Microsoft's Excel inventory data sheets into an SQL relational database.
+            Daily help-desk assistance for computer related issues.
         </div>
     </div>
 
@@ -280,6 +283,17 @@
         <h1>Online Presence</h1>
         <div class="left multiline"><i><a href="https://github.com/lmatteis">github.com/lmatteis</a></i></div>
         <div class="left multiline"><i><a href="http://stackoverflow.com/users/50394/luca-matteis">stackoverflow.com/users/50394/luca-matteis</a></i></div>
+
+
+        <div class="bull">&bull;</div>
+
+        <h1>Education</h1>
+        <div class="right">Computer Science Degree</div>
+        <div class="left multiline">Tor Vergata, Rome, Italy
+            &minus;
+            <span class="small">not yet completed</span>
+        </div>
+        
     </div>
 
     </body>
