readded the web link

--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@
             lmatteis@gmail.com
         </div>
     </div>
+    <div class="section">
+        <div class="left">
+            web
+        </div>
+        <div class="right">
+            <a href="http://pseudocodice.com">pseudocodice.com</a>
+        </div>
+    </div>
 
 
     <div class="bull">&bull;</div>
