changed personal website on resume

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             web
         </div>
         <div class="right">
-            <a href="http://pseudocodice.com">pseudocodice.com</a>
+            <a href="http://lucaa.org">lucaa.org</a>
         </div>
     </div>
 
