--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             src: url('MyriadPro-It.otf');
         }
         h2, .bull, i, i a {
-            color: #00afa7 !important;
+            color: #00afa7;
         }
         small {
             font-family: 'MyriadPro-It';
@@ -148,6 +148,39 @@
             font-size: 10px;
         }
         </style>
+        <script>
+var QueryString = function () {
+  // This function is anonymous, is executed immediately and 
+  // the return value is assigned to QueryString!
+  var query_string = {};
+  var query = window.location.search.substring(1);
+  var vars = query.split("&");
+  for (var i=0;i<vars.length;i++) {
+    var pair = vars[i].split("=");
+        // If first entry with this name
+    if (typeof query_string[pair[0]] === "undefined") {
+      query_string[pair[0]] = pair[1];
+        // If second entry with this name
+    } else if (typeof query_string[pair[0]] === "string") {
+      var arr = [ query_string[pair[0]], pair[1] ];
+      query_string[pair[0]] = arr;
+        // If third or later entry with this name
+    } else {
+      query_string[pair[0]].push(pair[1]);
+    }
+  } 
+    return query_string;
+} ();
+        window.onload = function() {
+            var color = QueryString.color;
+            var p = document.querySelectorAll("h2, .bull, i, i a");
+            for ( var i = 0; i < p.length; i++ ) {
+                p[i].style.color = color;
+            }
+            document.body.contentEditable='true'; 
+            document.designMode='on';
+        }
+        </script>
     </head>
     <body>
     <div class="title">
