--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@ var QueryString = function () {
         <div class="bull">&bull;</div>
 
         <h1>Education</h1>
-        <div class="right">Computer Science Degree</div>
-        <div class="left multiline">Tor Vergata, Rome, Italy
+        <div class="right">Design with software development</div>
+        <div class="left multiline">The Open University
             &minus;
             <span class="small">not yet completed</span>
         </div>
