updated interests and online presence

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ var QueryString = function () {
 
         <h1>Software and Libraries</h1>
 
-        <div class="left multiline">MySQL, CouchDB, Google App Engine, Node.js,  jQuery, Lucene</div>
+        <div class="left multiline">CouchDB, Google App Engine, Node.js, jQuery, Bitcoin</div>
 
         <div class="bull">&bull;</div>
 
@@ -326,6 +326,7 @@ var QueryString = function () {
         <h1>Online Presence</h1>
         <div class="left multiline"><i><a href="https://github.com/lmatteis">github.com/lmatteis</a></i></div>
         <div class="left multiline"><i><a href="http://stackoverflow.com/users/50394/luca-matteis">stackoverflow.com/users/50394/luca-matteis</a></i></div>
+        <div class="left multiline"><i><a href="http://bitcoin.stackexchange.com/users/8717/luca-matteis">bitcoin.stackexchange.com/users/8717/luca-matteis</a></i></div>
 
 
         <div class="bull">&bull;</div>
